--- a/spec/runner.html
+++ b/spec/runner.html
@@ -22,7 +22,7 @@
       }
       mocha.setup('bdd');
     </script>
-    <script src="./DelaunayTriangulation.js"></script>
+    <script src="./Delaunay.js"></script>
     <script>
       mocha.run();
     </script>
